--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>BNBE Technologies — LPG Conversion Electronics</title>
+  <title>BNBE Technologies — Electronic Solutions Provider</title>
   <meta name="description" content="BNBE Technologies designs and manufactures Algerian-made LPG conversion electronics — Stop Pompe, Injector Emulators, Wireless Interfaces, and installer tools.">
   <meta property="og:title" content="BNBE Technologies — LPG Conversion Electronics">
   <meta property="og:description" content="Algerian-made, installer-centric LPG electronics. Reliable, serviceable, export-ready.">
