--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
             <li class="mb-2"><strong>Compliance Roadmap</strong> — CE/ISO plans aligned with export goals.</li>
           </ul>
         </div>
-        <div class="col-lg-6">
+        <!-- <div class="col-lg-6">
           <figure class="card shadow-sm overflow-hidden">
             <img src="assets/lab-placeholder.jpg" class="card-img-top" alt="BNBE R&D lab and SMT benches" loading="lazy" decoding="async">
             <figcaption class="card-body small text-muted">R&D lab and small-batch production.</figcaption>
           </figure>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -146,8 +146,7 @@
           <div class="p-4 border rounded h-100 text-center">
             <h5>Fleets</h5>
             <p class="small text-muted">Scalable deployments and service SLAs.</p>
-            <a class="btn btn-outline-primary btn-sm" href="https://calendly.com/your-calendly/intro-call" target="_blank" rel="noopener">Book a Call</a>
-          </div>
+                  </div>
         </div>
       </div>
     </div>
@@ -387,8 +386,7 @@
         </ul>
         <div class="d-flex gap-2 mt-2">
           <a class="btn btn-outline-light" href="assets/BNBE_Deck.pdf" target="_blank" rel="noopener">Investor Deck</a>
-          <a class="btn btn-success" href="https://calendly.com/your-calendly/intro-call" target="_blank" rel="noopener">Book a Meeting</a>
-        </div>
+                </div>
         <p class="small text-white-50 mt-3">We aim to respond within 2 business days.</p>
       </div>
       <div class="col-md-6">
